@@ -3,16 +3,16 @@ Hash: SHA1
 
 AUX ladspa-sdk-1.13-asneeded.patch 624 RMD160 2f4cdc2f3d0a35279fec0699113cca9bbf743139 SHA1 c12f4dc88452da7c9eb27c31f26d4476399033f6 SHA256 0fc78bd4035485559147e9468427a27dcfa879cebcebfec92c7d006e9e95afd0
 AUX ladspa-sdk-1.13-fbsd.patch 440 RMD160 60f446ca31f4b363fed45bfde1265815a90c61f2 SHA1 efb27fbb3a9d787c5fe96e743d4c754bfa45baf9 SHA256 97db76bebb56866d006a0667bb3e67de81b2da1933e4c4d479163a992a488ef8
-AUX ladspa-sdk-1.13-no-LD.patch 1076 RMD160 ea67c2fc57970ceb34f7e25b8501dabc4652d99f SHA1 0be698d4fbe8ead7732c2e435f8dbdaa0c5e9021 SHA256 9b6aead4b761ff85ad1a4a5cf81b82e954153519d8eb95d3e7d92029d5d81bd7
+AUX ladspa-sdk-1.13-no-LD.patch 842 RMD160 40cc097dc2796da0c6fd3370cf34f4458e5edac0 SHA1 f4d9e112eac27dae6f8f4ffb3964b5d6832345b0 SHA256 8c9fee36c0bab5f1f3ea2c93fcf56de250fb6cc6da87842495a933fac431b3db
 AUX ladspa-sdk-1.13-properbuild.patch 3020 RMD160 e9a344e42ae28bd1c25fca187b5750435fef158f SHA1 5066d6b2526e3678b7373df4b00bbb8e0a6cafd8 SHA256 a5bc7ec6643d47a8d57e4e27a5934949c55d9b1f8d2c98a60eca99ea558f24ef
 DIST ladspa_sdk_1.13.tgz 70540 RMD160 e9eeae8edd24a6890fac3e34c4b55f844f44f8a0 SHA1 2b69e28afb62c0d97943124f48ed82de796f83ed SHA256 b5ed3f4f253a0f6c1b7a1f4b8cf62376ca9f51d999650dd822650c43852d306b
 EBUILD ladspa-sdk-1.13-r1.ebuild 1429 RMD160 113bf3fce8e4fd1760a9b11a933de6fed0753c9a SHA1 c6e9514ce2dad8b1d1bba516a045c08d5ec89de7 SHA256 64276e3a0dfd946a0764bef61031ba88dac911cc8dbcffce6104ccb1f28df79b
-MISC ChangeLog 7145 RMD160 fca70c8e3f86b72a889609dc5c53f50dff6eba68 SHA1 7c60436634bb338b7acdafd680e2959389cd3b52 SHA256 eb769967f87970bb2f84320459cfe49e93eaf538466a1c423e8dfdf47a8a8ea3
+MISC ChangeLog 7344 RMD160 bf8b8c0e2e359b87c07b28e3d79f313022102537 SHA1 7aa4462511563bf845e37f30cc67f55cafb3a5a6 SHA256 650a3b7185fe59fb1d873c8a3b65b0f49935d9af2bda48ad61fc38081db95be6
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkvD0EsACgkQni8M22OVw8CkfwCfa2wzbP0h0jUsniPkOP3nSTFV
-MJUAn2uFDeeZBv0UoNgs65Jx7P5VD6W+
-=Fdpv
+iEYEARECAAYFAkvD8p4ACgkQni8M22OVw8AaMwCfd7D/OlQ6JnegWebxGYgoIcUu
+xD0An2eIN3+VpEgr+1lWjMwgJee4Q08N
+=sjJ8
 -----END PGP SIGNATURE-----
